pyk/src/tests/kore/test-data/definitions/pass/test-hooks-1.kore
[]

module TEST-HOOKS-1

  hooked-sort S{} [hook{}("S.S")]

  hooked-symbol f{}() : S{} [hook{}("S.f")]

endmodule []
