pyk/src/tests/kore/test-data/definitions/should-fail/test-hooks-ctor.kore
[]

module TEST-HOOKS-CTOR

  hooked-sort S{} [hook{}("S.S")]

  // Verification failure: hooked sorts can't have additional constructors.
  symbol sym{}() : S{} [functional{}(), constructor{}()]

endmodule []